--- a/index.html
+++ b/index.html
@@ -1,16 +1,45 @@
 <html>
 <head>
-<title> Learning to build websites </title>
+<title> Lol </title>
 
 </head>
-<body style="background-color:DodgerBlue;">
 
+<style>
+body {
 
-
-<h1 style="background-color:DodgerBlue;">My experimenting website</h1>
-This is the home page of Taidhg Trocme.I learned to make a website on
- <a href="https://www.w3schools.com">w3schools.com</a>
-
+} 
+.top {
+ text-align:center;
+  height: 15%;
+  width: 100%;
+  background-color: black;
+  color: white;
+}
+.left {
+  height: 100%;
+  width: 20%;
+  background-color: lightgrey; 
+  float: left;  
+}
+.main {
+  
+  height: 100%;
+  width: 80%;
+  background-color: powderblue;
+  float: right;
+}
+</style>
+<body>
+ <div class="top">
+  The Magical Website
+ </div>
+ <div class="left">
+    This is the left
+ </div>
+ <div class="main">
+    this is the main
+ </div>
+</br>
 </body>
 
 </html>
