made nicer website added links and image

--- a/index.html
+++ b/index.html
@@ -1,44 +1,68 @@
 <html>
 <head>
-<title> Lol </title>
+<title> The Magical Website</title>
 
 </head>
 
 <style>
+ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+      }
+      
 body {
 
 } 
 .top {
  text-align:center;
-  height: 15%;
+  height: 200px;
   width: 100%;
   background-color: black;
   color: white;
-}
+  font-size: 400%
+ }
 .left {
   height: 100%;
   width: 20%;
-  background-color: lightgrey; 
-  float: left;  
+  background-color: rgb(145, 138, 138); 
+  float: left;
+  
 }
 .main {
   
   height: 100%;
   width: 80%;
-  background-color: powderblue;
+  background-color: rgb(24, 160, 214);
   float: right;
+}
+
+img {
+  max-width:20%;
+  height:auto;
+  float: left;
+  padding-left: 20px;
+  padding-top: 20px;
 }
 </style>
 <body>
- <div class="top">
-  The Magical Website
+ <div class="top"><pre>
+  <img src = "http://images.nintendolife.com/news/2014/11/video_five_vital_tips_for_conquering_shovel_knight/attachment/0/900x.jpg">
+  The Magical Website </pre>
  </div>
  <div class="left">
-    This is the left
+  <ul>
+      
+  <li><a href="https://www.youtube.com/channel/UC3gzR8h9sKNfQ6Ac50gV8Sw">Check out my Youtube Channel</a></li>
+  <li><a href="bla bla bla">Chat</a></li>
+  <li><a href=""></a></li>
+  <li><a href="about.asp">About</a></li>
+</ul>     
  </div>
  <div class="main">
     this is the main
  </div>
+ 
 </br>
 </body>
 
