--- a/index.html
+++ b/index.html
@@ -1,63 +1,30 @@
 <html>
 <head>
 <title> The Magical Website</title>
+<link rel = "stylesheet" type = "text/css" href = "style.css" />
+
+<SCRIPT>
+  
+
+    function passWord() {
+      var pass1 = prompt('Please Enter Your Password');
+      if (pass1.toLowerCase()=="123") 
+      {
+        window.open("https://deadsimplechat.com/nDhUZ57Oh");
+      } else {
+        window.alert("Password is wrong!");
+      }
+    }
+    </SCRIPT>
 
 </head>
 
-<style>
-ul {
-        list-style-type: none;
-        background-color: rgba(255, 255, 255, 0);
-        text-align: center;
-        width: 100%;
-    }
-ul li { /*Horizontal List */
-  display: inline;
-  margin-right: 35px;
-  color: rgb(165, 161, 161);
-  font-size: 20px;
-  background-color: rgba(255, 255, 255, 0);
-  float: right
-  }
-  ul li a {
-    text-decoration: none;
-  }
-  li a:hover {
-    background-color:rgb(0, 0, 0);
-    color: rgb(255, 255, 255)
-  }
-  h1 { /*the Magical Website*/
-    font-size: 800%;
-    text-shadow: 5px 3px rgb(135, 253, 0);
-  }
-.top {
-  background-image: url('epic scenery.jpg');
-  background-size: 100% 800px;
-  text-align:center;
-  height: 800px;
-  width: 100%;
-  
- }
-.left {
-  height: 100%;
-  width: 20%;
-  background-color: rgb(0, 0, 0); 
-  float: left;
-}
-.main {
-  height: 100%;
-  width: 80%;
-  background-color: rgba(99, 221, 99, 0.726);
-  float: right;
-}
-
-</style>
-<body>
+<body>   
  <div class="top">
     <ul>
       <li><a href="https://www.youtube.com/channel/UC3gzR8h9sKNfQ6Ac50gV8Sw">Check out my Youtube Channel</a></li>
-      <li><a href="bla bla bla">Chat</a></li>
-      <li><a href="about.asp">About</a></li>
+      <li onClick="passWord()"><a>Chat</a></li>
+      <li><a href="">About</a></li>
     </ul>
     <h1><pre>
       
@@ -68,10 +35,15 @@ ul li { /*Horizontal List */
   
  </div>
  <div class="main">
-    this is the main
- </div>
- 
+   <div class="timerText">
+      Time left = <span id="timer"></span>
+      <button type="button" onclick="startTimer()">Click Me!</button> 
+    </div>
+</div>
 </br>
+
+
+<script src="timer.js"></script> 
 </body>
 
 </html>
