addition of a timer to improve relaxation while viewing the website ass well as a gif behind it

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 <body>   
  <div class="top">
+
     <ul>
       <li><a href="https://www.youtube.com/channel/UC3gzR8h9sKNfQ6Ac50gV8Sw">Check out my Youtube Channel</a></li>
       <li onClick="passWord()"><a>Chat</a></li>
@@ -37,7 +38,7 @@
  <div class="main">
    <div class="timerText">
       Time left = <span id="timer"></span>
-      <button type="button" onclick="startTimer()">Click Me!</button> 
+      <button type="button" onclick="startTimer(1)" name="timer">Click Me!</button> 
     </div>
 </div>
 </br>
