Added new files.

--- a/index.html
+++ b/index.html
@@ -32,10 +32,21 @@
   
  The Magical Website</pre></h1>
  </div>
- <div class="left">
-  
- </div>
+
+ 
  <div class="main">
+   <img src = "mush.gif">
+  <img src = "catstyping.gif">
+  <img src = "dogtyping.gif">
+  <img src = "mouseclick.gif">
+  <img src = "notype.gif">
+  <img src = "Monkey.gif">
+  <img src = "boxglovestype.gif">
+  <img src = "MOUSE.gif">
+  <img src = "beartyping.gif">
+  <img src = "animatedcat.gif">
+<h1>Hover over the button then press ctrl+r do not touch the mouse or keyboard until time runs out</h1>
+
    <div class="timerText">
       Time left = <span id="timer"></span>
       <button type="button" onclick="startTimer(1)" name="timer">Click Me!</button> 
